--- a/trainers/templates/trainers/main.html
+++ b/trainers/templates/trainers/main.html
@@ -10,6 +10,6 @@
 
 <h2><a href="{% url 'client' %}">Клиенты </a> </h2>
 
-<h2>Занятия</h2>
+<h2><a href="{% url 'teams' %}"> Группы </a> </h2>
 
-<h2>Тренеры</h2>
+<h2><a href="{% url 'trainers' %}">Тренеры </a> </h2>
