--- a/trainers/templates/trainers/teams.html
+++ b/trainers/templates/trainers/teams.html
@@ -1,9 +1,12 @@
+
+
+
 <h1>Группы:</h1>
 
 {%if teams%}
     <ul>
         {% for team in teams %}
-        <li> {{team.name}} </a></li>
+        <li> <a href="team/{{team.id}}"> {{team.name}}  </a></li>
         {% endfor %}
     </ul>
 {% else %}
