--- a/trainers/templates/trainers/trainers_add.html
+++ b/trainers/templates/trainers/trainers_add.html
@@ -11,6 +11,12 @@
     <p>Отчество:
     <input type="text" name="name"> </p>
 
+    <p>Электронная почта:
+    <input type="text" name="name"> </p>
+
+    <p>Дата рождения:
+    <input type="text" name="name"> </p>
+
 
     <p><input type="submit" value="Отправить"></p>
 </form>
