--- a/trainers/templates/trainers/main.html
+++ b/trainers/templates/trainers/main.html
@@ -13,3 +13,5 @@
 <h2><a href="{% url 'teams' %}"> Группы </a> </h2>
 
 <h2><a href="{% url 'trainers' %}">Тренеры </a> </h2>
+
+<h2><a href="{% url 'trainers' %}">Тренеры </a> </h2>
