--- a/trainers/templates/trainers/team_add.html
+++ b/trainers/templates/trainers/team_add.html
@@ -15,5 +15,32 @@
         </select>
     </p>
 
+    <p>Тренер:</p>
+    <p>
+        <select name="trainer">
+            {% for trainer in trainers %}
+            <option value="{{trainer.user.id}}">{{trainer.user.first_name}} {{trainer.user.last_name}}</option>
+            {% endfor %}
+        </select>
+    </p>
+
+    <p>Занятия:</p>
+    <p>До какого числа будут проходить занятия: <input type="date" name="date_end"></p>
+    <p>Дни недели:
+    <select multiple name="days">
+        <option value="0">Понедельник</option>
+        <option value="1">Вторник</option>
+        <option value="2">Среда</option>
+        <option value="3">Четверг</option>
+        <option value="4">Пятница</option>
+        <option value="5">Суббота</option>
+        <option value="6">Воскресенье</option>
+    </select></p>
+
+    <p>Время занятий</p>
+    <p>Время начала занятий: <input type="time" name="act_begin_time"></p>
+    <p>Время конца занятий: <input type="time" name="act_end_time"></p>
+
+
     <p><input type="submit" value="Отправить"></p>
 </form>
