--- a/trainers/templates/trainers/trainer_info.html
+++ b/trainers/templates/trainers/trainer_info.html
@@ -1,12 +1,34 @@
 <h1> Информация о тренере  </h1>
 
-<p> Имя тренера: {{team.name}}  </p>
-
-<p>участники группы:</p>
-
 <ul>
-{% for client in clients %}
-    <li><a href="{% url 'client' %}/{{client.id}}"> {{ client.first_name }} {{ client.last_name }}</li>
 
-{% endfor %}
+    <li>
+        <p> Имя тренера: {{trainer.user.first_name}}  </p>
+    </li>
+
+    <li>
+        <p> Фамилия тренера: {{trainer.user.last_name}}  </p>
+    </li>
+
+    <li>
+        <p> Отчество тренера: {{trainer.otchestv}}  </p>
+    </li>
+
+    <li>
+        <p> Дата рождения: {{trainer.birth_date}}  </p>
+    </li>
+
 </ul>
+
+    {% if groups %}
+    <p>Группы </p>
+
+    <ul>
+    {% for team in teams %}
+        <li> <a href="{% url 'team' %}/{{team.id}}"> {{team.name}} </a></li>
+    {% endfor %}
+    </ul>
+
+    {% else %}
+        <p>У тренера ещё нет групп.</p>
+    {% endif %}
