--- a/trainers/templates/trainers/trainers.html
+++ b/trainers/templates/trainers/trainers.html
@@ -4,7 +4,7 @@
     <ul>
         {% for trainer in trainers %}
 
-            <li> {{trainer.first_name}} {{trainer.last_name}}</li>
+            <li> <a href="trainers/{{trainer.user.id}}">{{trainer.user.id}}/ {{trainer.user.first_name}} {{trainer.user.last_name}} </a> </li>
 
         {% endfor %}
     </ul>
@@ -12,3 +12,4 @@
     <p>No trainers sore </p>
 {% endif %}
 
+<p> <a href="{% url 'trainers_add' %}"> Добавить тренера </a> </p>
