--- a/trainers/templates/trainers/main.html
+++ b/trainers/templates/trainers/main.html
@@ -34,7 +34,6 @@
             <button>Clear All</button>
         </div>
 </div>
-<script src="../js/todo.js"></script>
 
 
 <div class="container">
@@ -121,4 +120,5 @@
  {% block js%}
 <script src="../../../static/js/slider.js"></script>
 <script src="../../../static/js/text.js"></script>
+<script src="../../../static/js/todo.js"></script>
   {% endblock %}
