add more static

--- a/trainers/templates/trainers/base.html
+++ b/trainers/templates/trainers/base.html
@@ -20,8 +20,8 @@
             </p>
         </div>
         <div class="container_header">
-            <a href="{% url 'client' %}">Список Учеников</a>
-            <a href="calendar.html">Расписание</a>
+            <a href="{% url 'teams' %}">Список Учеников</a>
+            <a href="#">Расписание</a>
             <a href="{% url 'main' %}">Главная</a>
         </div>
         <form action="{% url 'logout' %}">
