--- a/trainers/templates/trainers/teams.html
+++ b/trainers/templates/trainers/teams.html
@@ -1,16 +1,62 @@
+{% extends 'trainers/base.html' %}
+{% block content %}
 
+ {% block head %}
+    <link rel="stylesheet" href="../../../static/css/students.css">
+    {% endblock %}
 
+<div id="cards">
+    <h2 id="my_students">Мои ученики</h2>
+    {%if teams%}
+    {% for team in teams %}
+    <details>
+        <summary>{{team.id}} {{team.name}} </summary>
+        <div class="cards_elements">
+            {%if clients%}
+               {% for client in clients %}
+            <div class="card">
+                <div class="front">
+                    <p>Студент.ДеньРождения</p>
+                    <h1>
+                        {{client.first_name}}  {{client.last_name}}
+                    </h1>
+                    <p>Студент.Описание
+                    </p>
+                </div>
+                <div class="back">
+                    <p>Студент.ДеньРождения</p>
+                    <h1>
+                        {{client.first_name}}  {{client.last_name}}
+                    </h1>
+                    <p><a href="client/{{client.id}}">Студент.Ссылка</a></p>
+                </div>
+            </div>
+                {% endfor %}
+            {% else %}
+<p>No clients</p>
+{%endif%}
+        </div>
+    </details>
 
-<h1>Группы:</h1>
+    {% endfor %}
 
-{%if teams%}
-    <ul>
-        {% for team in teams %}
-        <li> <a href="team/{{team.id}}"> {{team.name}}  </a></li>
-        {% endfor %}
-    </ul>
-{% else %}
+    {% else %}
     <p>Нет групп</p>
 {%endif%}
 
+</div>
+
+
+<!--{%if teams%}-->
+<!--    <ul>-->
+<!--        {% for team in teams %}-->
+<!--        <li> <a href="team/{{team.id}}"> {{team.name}}  </a></li>-->
+<!--        {% endfor %}-->
+<!--    </ul>-->
+<!--{% else %}-->
+<!--    <p>Нет групп</p>-->
+<!--{%endif%}-->
+
 <p> <a href="{% url 'team_add' %}"> Создать группу </a> </p>
+
+{% endblock %}
