--- a/trainers/templates/trainers/base.html
+++ b/trainers/templates/trainers/base.html
@@ -20,7 +20,8 @@
             </p>
         </div>
         <div class="container_header">
-            <a href="{% url 'teams' %}">Список Учеников</a>
+            <a href="{% url 'trainers' %}">Коллеги</a>
+            <a href="{% url 'teams' %}">Ученики</a>
             <a href="#">Расписание</a>
             <a href="{% url 'main' %}">Главная</a>
         </div>
