--- a/static/css/students.css
+++ b/static/css/students.css
@@ -88,6 +88,10 @@ summary{
     margin-top: 20px;
     margin-left: 50px;
     font-size: 20px;
-    list-style: none;
+    list-style: none; !important;
 }
 
+.add_group{
+    margin-top: 10em;
+    color: #293241;
+}
