--- a/trainers/templates/trainers/base.html
+++ b/trainers/templates/trainers/base.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container_header">
             <a href="{% url 'trainers' %}">Коллеги</a>
-            <a href="{% url 'teams' %}">Ученики</a>
+            <a href="{% url 'teams' %}">Группы</a>
             <a href="#">Расписание</a>
             <a href="{% url 'main' %}">Главная</a>
         </div>
@@ -51,11 +51,11 @@
     </div>
 </footer>
 
-<section id="copy-right">
-    <div class="copy-right-sec"><i class="fa-solid fa-copyright"></i>
-        С любовью для вас команда <a href="#">Команда.Название</a>
-    </div>
-</section>
+<!--<section id="copy-right">-->
+<!--    <div class="copy-right-sec"><i class="fa-solid fa-copyright"></i>-->
+<!--        С любовью для вас команда <a href="#">Команда.Название</a>-->
+<!--    </div>-->
+<!--</section>-->
 
 <script src="../../../static/js/text.js"></script>
   {% block js%}
