--- a/trainers/templates/trainers/team_add.html
+++ b/trainers/templates/trainers/team_add.html
@@ -1,50 +1,53 @@
-<h1>Добавить группу</h1>
-
-
-<form action="{% url 'team_add_action' %}" method="post">
-    {% csrf_token %}
-    <p>Название группы:
-    <input type="text" name="name"> </p>
-
-
-    <p>Участники:</p>
-    <p>
-        <select multiple name="members">
-            {% for client in clients %}
-            <option value="{{client.id}}">{{client.first_name}} {{client.last_name}}</option>
-            {% endfor %}
-        </select>
-    </p>
-
-    <p>Тренер:</p>
-    <p>
-        <select name="trainer">
-            {% for trainer in trainers %}
-            <option value="{{trainer.user.id}}">{{trainer.user.first_name}} {{trainer.user.last_name}}</option>
-            {% endfor %}
-        </select>
-    </p>
-
-    <p>Занятия:</p>
-    <p>До какого числа будут проходить занятия: <input type="date" name="date_end"></p>
-    <p>Дни недели:
-    <select multiple name="days">
-        <option value="0">Понедельник</option>
-        <option value="1">Вторник</option>
-        <option value="2">Среда</option>
-        <option value="3">Четверг</option>
-        <option value="4">Пятница</option>
-        <option value="5">Суббота</option>
-        <option value="6">Воскресенье</option>
-    </select></p>
-
-    <p>Время занятий</p>
-    <p>Время начала занятий: <input type="time" name="act_begin_time"></p>
-    <p>Время конца занятий: <input type="time" name="act_end_time"></p>
-
-    <p>Стоимость занятий: <input maxlength="20" name="price"></p>
 
 
 
-    <p><input type="submit" value="Отправить"></p>
-</form>
+
+<!--ТЕПЕРЬ ЭТОТ ФАЙЛ НЕ НУЖЕН, ДАВАЙ УДАЛИМ!-->
+<!--ЭТА ИНФОРМАЦИЯ НАХОДИТСЯ НА СТРАНИЦЕ TEAMS-->
+
+
+
+
+<!--<form action="{% url 'team_add_action' %}" method="post">-->
+<!--    {% csrf_token %}-->
+<!--    <p>Название группы: <input type="text" name="name"></p>-->
+<!--    <p>Участники:</p>-->
+<!--    <p>-->
+<!--        <select multiple name="members">-->
+<!--            {% for client in clients %}-->
+<!--            <option value="{{client.id}}">{{client.first_name}} {{client.last_name}}</option>-->
+<!--            {% endfor %}-->
+<!--        </select>-->
+<!--    </p>-->
+
+<!--    <p>Тренер:</p>-->
+<!--    <p>-->
+<!--        <select name="trainer">-->
+<!--            {% for trainer in trainers %}-->
+<!--            <option value="{{trainer.user.id}}">{{trainer.user.first_name}} {{trainer.user.last_name}}</option>-->
+<!--            {% endfor %}-->
+<!--        </select>-->
+<!--    </p>-->
+
+<!--    <p>Занятия:</p>-->
+<!--    <p>До какого числа будут проходить занятия: <input type="date" name="date_end"></p>-->
+<!--    <p>Дни недели:-->
+<!--        <select multiple name="days">-->
+<!--            <option value="0">Понедельник</option>-->
+<!--            <option value="1">Вторник</option>-->
+<!--            <option value="2">Среда</option>-->
+<!--            <option value="3">Четверг</option>-->
+<!--            <option value="4">Пятница</option>-->
+<!--            <option value="5">Суббота</option>-->
+<!--            <option value="6">Воскресенье</option>-->
+<!--        </select></p>-->
+
+<!--    <p>Время занятий</p>-->
+<!--    <p>Время начала занятий: <input type="time" name="act_begin_time"></p>-->
+<!--    <p>Время конца занятий: <input type="time" name="act_end_time"></p>-->
+
+<!--    <p>Стоимость занятий: <input maxlength="20" name="price"></p>-->
+
+
+<!--    <p><input type="submit" value="Отправить"></p>-->
+<!--</form>-->
