--- a/trainers/templates/trainers/teams.html
+++ b/trainers/templates/trainers/teams.html
@@ -2,16 +2,20 @@
 
 {% block head %}
 <link rel="stylesheet" href="../../../static/css/students.css">
+<link rel="stylesheet" href="../../../static/css/form.css">
 {% endblock %}
 
 {% block content %}
 
 <div id="cards">
-    <h2 id="my_students">ВСЕ ученики</h2>
+    <h2 id="my_students">ВСЕ группы и ученики</h2>
+    <h4>Тут еще будет сортировка/фильтрация по группам</h4>
     {%if teams%}
     {% for team in teams %}
     <details>
-        <summary>{{team.name}}</summary>
+        <summary>{{team.name}} {{team.trainer.user.last_name}} {{team.trainer.user.first_name}}
+            {{team.trainer.otchestv}}
+        </summary>
         <div class="cards_elements">
             {% for client in team.clients.all %}
             <div class="card">
@@ -34,46 +38,94 @@
             {% endfor %}
         </div>
     </details>
-
     {% endfor %}
-
     {% else %}
     <p>Нет групп</p>
     {%endif%}
+    <!--    <div class="add_group" ><a href="{% url 'team_add' %}"> Создать группу </a></div>-->
+    <button onclick="showGroupForm"> Создать группу</button>
+    <button onclick="showClientForm"> Добавить клиента </button>
+            <div class="teams_forms">
+                <div class="form">
+                    <form class="decor" action="{% url 'team_add_action' %}" method="post">
+                        {% csrf_token %}
+                        <div class="form-left-decoration"></div>
+                        <div class="form-right-decoration"></div>
+                        <div class="circle"></div>
+                        <div class="form-inner">
+                            <h3>Добавление группы</h3>
+                            <input type="text" id="name" placeholder="Название">
+                            <p>
+                                <select multiple name="members">
+                                    {% for client in clients %}
+                                    <option value="{{client.id}}">{{client.first_name}} {{client.last_name}}</option>
+                                    {% endfor %}
+                                </select>
+                            </p>
+                            <p>Тренер:</p>
+                            <p>
+                                <select name="trainer">
+                                    {% for trainer in trainers %}
+                                    <option value="{{trainer.user.id}}">{{trainer.user.first_name}}
+                                        {{trainer.user.last_name}}
+                                    </option>
+                                    {% endfor %}
+                                </select>
+                            </p>
+                            <p>Занятия:</p>
+                            <p>До какого числа будут проходить занятия: <input type="date" name="date_end"></p>
+                            <p>Дни недели:
+                                <select multiple name="days">
+                                    <option value="0">Понедельник</option>
+                                    <option value="1">Вторник</option>
+                                    <option value="2">Среда</option>
+                                    <option value="3">Четверг</option>
+                                    <option value="4">Пятница</option>
+                                    <option value="5">Суббота</option>
+                                    <option value="6">Воскресенье</option>
+                                </select></p>
+                            <input type="time" name="act_begin_time" placeholder="Время начала занятий">
+                            <input type="time" name="act_end_time" placeholder="Время конца занятий">
+                            <input type="text" maxlength="20" name="price" placeholder="Цена">
+
+                            <input type="submit" value="Добавить">
+                        </div>
+                    </form>
+                </div>
 
 
-    <div class="add_group" ><a href="{% url 'team_add' %}"> Создать группу </a></div>
+                <div class="form">
+                    <form class="decor" action="{% url 'client_add_action' %}" method="post">
+                        {% csrf_token %}
+                        <div class="form-left-decoration"></div>
+                        <div class="form-right-decoration"></div>
+                        <div class="circle"></div>
+                        <div class="form-inner">
+                            <h3>Добавление клиента</h3>
+                            <input type="text" name="client_name" id="client_name" placeholder="Имя">
+                            <input type="text" name="client_surname" id="client_surname" placeholder="Фамилия">
+                            <input type="date" name="client_birthdate" id="client_birthdate"
+                                   placeholder="Дата рождения">
+                            <input type="submit" value="Добавить">
+                        </div>
+                    </form>
+                </div>
+            </div>
 </div>
 
 
-
-<!--    <ul>-->
-<!--{% for team in teams %}-->
-<!--    <li>{{ team.name }}</li>-->
-<!--    <ul>-->
-<!--    {% for client in team.clients.all %}-->
-<!--        <li>{{ client.first_name }} {{ client.last_name }}</li>-->
-<!--    {% empty %}-->
-<!--        <li>Нет учеников</li>-->
-<!--    {% endfor %}-->
-<!--    </ul>-->
-<!--{% empty %}-->
-<!--    <li>Нет групп</li>-->
-<!--{% endfor %}-->
-<!--</ul>-->
-
-{% endblock %}
+            <!--БЫЛО ДО-->
 
 
-<!--БЫЛО ДО-->
+            <!--{%if teams%}-->
+            <!--    <ul>-->
+            <!--        {% for team in teams %}-->
+            <!--        <li> <a href="team/{{team.id}}"> {{team.name}}  </a></li>-->
+            <!--        {% endfor %}-->
+            <!--    </ul>-->
+            <!--{% else %}-->
+            <!--    <p>Нет групп</p>-->
+            <!--{%endif%}-->
 
 
-<!--{%if teams%}-->
-<!--    <ul>-->
-<!--        {% for team in teams %}-->
-<!--        <li> <a href="team/{{team.id}}"> {{team.name}}  </a></li>-->
-<!--        {% endfor %}-->
-<!--    </ul>-->
-<!--{% else %}-->
-<!--    <p>Нет групп</p>-->
-<!--{%endif%}-->
+            {% endblock %}
