--- a/trainers/templates/trainers/main.html
+++ b/trainers/templates/trainers/main.html
@@ -67,25 +67,21 @@
 
 <div class="container">
     <div class="container-text">
-        <h3>Достижения</h3>
-        <h4 class="link">Тут очень увлекательный текст про достижения</h4>
-        <ul>
-            <li><a>Награды: 28</a></li>
-            <li><a>Участие: 39</a></li>
-        </ul>
+        <h3>Что-то еще</h3>
+        <h4 class="link">Тут очень увлекательный текст про что-то еще</h4>
     </div>
     <div>
         <div class="rectangle rectangle-right rectangle-back">
-            <a href="#"><h2 style="padding-top: 1em">Награды</h2>
+            <a href="#"><h2 style="padding-top: 1em">Вот это цифры:</h2>
                 <h1>28</h1></a></div>
         <div class="rectangle rectangle-left rectangle-front">
-            <a href="#"><h2 style="padding-top: 2em">Участие</h2>
+            <a href="#"><h2 style="padding-top: 2em">Ого</h2>
                 <h1>39</h1></a></div>
     </div>
 </div>
 
 <div class="slider">
-    <h3 class="name">Слайдер</h3>
+    <h3 class="name">Листающиеся новости</h3>
     <div class="slider-field">
         <div class="slider-text">
             <h4>Заголовок1</h4>
