--- a/static/css/students.css
+++ b/static/css/students.css
@@ -32,10 +32,10 @@
 
 .card {
     flex-basis: calc(33.33% - 10px);
-    max-width: 300px;
+    max-width: 250px;
     margin: 45px 70px;
-    width: calc((100% - 1200px) / 2);
-    height: 600px;
+    width: calc((100% - 1500px) / 2);
+    height: 350px;
     cursor: pointer;
     transform: translate(-15%, 16%);
     border-radius: 30px;
@@ -94,4 +94,15 @@ summary{
 .add_group{
     margin-top: 10em;
     color: #293241;
+}
+
+
+.teams_btn {
+    background-color: rgb(152, 193, 217);
+    padding-top: 3em;
+    margin-top: 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
