--- a/trainers/templates/trainers/teams.html
+++ b/trainers/templates/trainers/teams.html
@@ -43,8 +43,10 @@
     <p>Нет групп</p>
     {%endif%}
     <!--    <div class="add_group" ><a href="{% url 'team_add' %}"> Создать группу </a></div>-->
+    <div class="teams_btn">
     <button onclick="showGroupForm"> Создать группу</button>
     <button onclick="showClientForm"> Добавить клиента </button>
+    </div>
             <div class="teams_forms">
                 <div class="form">
                     <form class="decor" action="{% url 'team_add_action' %}" method="post">
@@ -56,7 +58,7 @@
                             <h3>Добавление группы</h3>
                             <input type="text" id="name" placeholder="Название">
                             <p>
-                                <select multiple name="members">
+                                <select multiple name="members" class="select">
                                     {% for client in clients %}
                                     <option value="{{client.id}}">{{client.first_name}} {{client.last_name}}</option>
                                     {% endfor %}
@@ -64,7 +66,7 @@
                             </p>
                             <p>Тренер:</p>
                             <p>
-                                <select name="trainer">
+                                <select name="trainer" class="select">
                                     {% for trainer in trainers %}
                                     <option value="{{trainer.user.id}}">{{trainer.user.first_name}}
                                         {{trainer.user.last_name}}
@@ -75,7 +77,7 @@
                             <p>Занятия:</p>
                             <p>До какого числа будут проходить занятия: <input type="date" name="date_end"></p>
                             <p>Дни недели:
-                                <select multiple name="days">
+                                <select multiple name="days" class="select">
                                     <option value="0">Понедельник</option>
                                     <option value="1">Вторник</option>
                                     <option value="2">Среда</option>
@@ -92,8 +94,6 @@
                         </div>
                     </form>
                 </div>
-
-
                 <div class="form">
                     <form class="decor" action="{% url 'client_add_action' %}" method="post">
                         {% csrf_token %}
@@ -113,6 +113,9 @@
             </div>
 </div>
 
+    {% endblock %}
+
+
 
             <!--БЫЛО ДО-->
 
@@ -128,4 +131,3 @@
             <!--{%endif%}-->
 
 
-            {% endblock %}
