--- a/trainers/templates/trainers/base.html
+++ b/trainers/templates/trainers/base.html
@@ -26,7 +26,7 @@
             <a href="{% url 'main' %}">Главная</a>
         </div>
         <form action="{% url 'logout' %}">
-    <input type="submit" value="Выйти">
+    <input id="exit" type="submit" value="Выйти">
 </form>
     </div>
 </header>
