--- a/trainers/templates/trainers/main.html
+++ b/trainers/templates/trainers/main.html
@@ -16,7 +16,7 @@
         <h4>Тренер</h4>
         {% endif %}
         <h4>{{trainer.birthdate}}</h4>
-        <button class="btn" style="margin-left: 30px; margin-top: 30px">Редактировать</button>
+        <button class="change_btn" style="margin-top: 30px">Редактировать</button>
     </div>
 </div>
 
