--- a/trainers/templates/trainers/trainers.html
+++ b/trainers/templates/trainers/trainers.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-
+<div style="background-color: rgb(152, 193, 217);">
+ <h2 id="my_students">Мои коллеги</h2>
 <div id="cards">
-    <h2 id="my_students">Мои коллеги</h2>
     {%if trainers %}
     <div class="cards_elements">
         {% for trainer in trainers %}
@@ -67,7 +67,7 @@
     </form>
 </div>
 </div>
-
+</div>
 
 
 {% endblock %}
