--- a/static/css/students.css
+++ b/static/css/students.css
@@ -1,23 +1,15 @@
-#cards h1::before{
-    content: '';
-    position: absolute;
-    left: 30px;
-    bottom: 15px;
-    background-color: #EE6C4D;
-    height: 3px;
-    box-sizing: border-box;
-    width: 80px;
-}
-
 #cards {
+    overflow: hidden;
     background-color: rgb(152, 193, 217, 0.7);
     height: 100%;
+    padding-right: 2em;
+    min-height: 800px;
 }
 
 #my_students {
-    padding-top: 50px;
+    padding-top: 1em;
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 1em;
     color: #293241;
 }
 
@@ -32,14 +24,15 @@
 
 .card {
     flex-basis: calc(33.33% - 10px);
-    max-width: 250px;
+    max-width: 200px;
     margin: 45px 70px;
     width: calc((100% - 1500px) / 2);
-    height: 350px;
+    height: 250px;
     cursor: pointer;
     transform: translate(-15%, 16%);
     border-radius: 30px;
     z-index: 5;
+    font-size: 0.8em;
 }
 
 
@@ -98,7 +91,6 @@ summary{
 
 
 .teams_btn {
-    background-color: rgb(152, 193, 217);
     padding-top: 3em;
     margin-top: 2em;
     display: flex;
@@ -106,4 +98,11 @@ summary{
     justify-content: space-around;
     align-items: center;
     padding-bottom: 2em;
+}
+
+
+@media (max-width: 1150px) {
+    .card {
+        font-size: 0.6em;
+    }
 }
