--- a/trainers/templates/trainers/base.html
+++ b/trainers/templates/trainers/base.html
@@ -23,7 +23,7 @@
             <a href="{% url 'trainers' %}">Коллеги</a>
             <a href="{% url 'clients' %}">Клиенты</a>
             <a href="{% url 'teams' %}">Группы</a>
-            <a href="#">Расписание</a>
+            <a href="{% url 'schedule' %}">Расписание</a>
             <a href="{% url 'main' %}">Главная</a>
         </div>
         <form action="{% url 'logout' %}">
